<resources>
    <string name="app_name">爱侗乡</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>

    <string name="no_data">暂无数据</string>
    <string name="no_net">网络不给力哦</string>
    <string name="hint_net_error_set">网络连接异常，请检查您的网络连接</string>
    <string name="hint_net_error_retry">网络连接异常，请稍后重试</string>
    <string name="retry">重试</string>
    <string name="set_now">马上设置</string>
    <string name="net_desc">网络说明</string>
    <string name="hint_net_desc_1">您的设备可能未连接移动网络，或wi-fi网络</string>
    <string name="hint_net_desc_set_wifi_label">wi-fi网络请参照下面方法：</string>
    <string name="hint_net_desc_wifi_set">在设备的【设置>WLAN】请选择一个wi-fi热点连接。</string>
    <string name="hint_net_desc_set_mobile_network_label">移动数据请参照下面方法：</string>
    <string name="hint_net_desc_set_mobile_network">在设备的【设置>移动网络】中启动数据网络。</string>
    <string name="hint_net_desc_set_permission_label">检查网络权限是否打开：</string>
    <string name="hint_net_desc_set_permission">在设备的应用管理中查看“%1$s”，是否已经开启了使用网络的权限。</string>
    <string name="no_more">没有更多数据</string>
    <string name="title_home">首页</string>
    <string name="title_video">视频</string>
    <string name="title_square">广场</string>
    <string name="title_audio">音频</string>
    <string name="title_mine">我的</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="sms_code">短信验证码</string>
    <string name="mobile">手机号码</string>
    <string name="login_password">登录密码</string>
    <string name="mobile_can_not_use">手机不能使用?</string>
    <string name="next">下一步</string>
    <string name="forget_password">忘记密码</string>
    <string name="new_user_register">新用户注册</string>
    <string name="finish">完成</string>
    <string name="set_password">设置密码(6-16位字母和数字组合)</string>
    <string name="password_hint">密码(6-16位字母和数字组合)</string>
    <string name="input_again">再次输入密码</string>
    <string name="input_new_password_again">再次输入密码</string>
    <string name="input_current_password">输入当前密码</string>
    <string name="input_new_password">输入新密码(6-16位字母和数字组合)</string>

    <string name="more">更多</string>
    <string name="nickname">昵称</string>
    <string name="photo">相册</string>
    <string name="camera">拍照</string>
    <string name="err_sdcard">sd卡不存在或者不可用，请检查后使用</string>
    <string name="account_security">账号与安全</string>
    <string name="shield_setting">屏蔽设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="version_update">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="search">搜索</string>
    <string name="submit">提交</string>


    <string-array name="adBlockUrl">
        <item>ubmcmm.baidustatic.com</item>
        <item>cpro2.baidustatic.com</item>
        <item>cpro.baidustatic.com</item>
        <item>s.lianmeng.360.cn</item>
        <item>nsclick.baidu.com</item>
        <item>pos.baidu.com</item>
        <item>cbjs.baidu.com</item>
        <item>cpro.baidu.com</item>
        <item>images.sohu.com/cs/jsfile/js/c.js</item>
        <item>union.sogou.com/</item>
        <item>sogou.com/</item>
        <item>a.baidu.com</item>
        <item>c.baidu.com</item>

    </string-array>

</resources>
