<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/tab_home_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/tab_video_selector"
        android:title="@string/title_video" />

    <item
        android:id="@+id/navigation_square"
        android:icon="@drawable/tab_square_selector"
        android:title="@string/title_square" />
    <item
        android:id="@+id/navigation_audio"
        android:icon="@drawable/tab_audio_selector"
        android:title="@string/title_audio" />
    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/tab_my_selector"
        android:title="@string/title_mine" />

</menu>
