<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_dialog_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/photo"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_line" />
    <TextView
        android:id="@+id/tv_dialog_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/camera"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tv_photo_dialog_cacel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</LinearLayout>