<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.aidongxiang.app.ui.login.ForgetPasswordActivity">

    <include layout="@layout/layout_title_bar"/>


    <EditText
        android:id="@+id/etCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLength="30"
        android:layout_marginLeft="@dimen/margin_screen_left"
        android:layout_marginRight="@dimen/margin_screen_right"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:hint="@string/input_current_password"
        android:background="@android:color/transparent"
        android:textColor="@color/black5"/>
    <View style="@style/line"
        android:layout_marginLeft="@dimen/margin_screen_left"
        android:layout_marginRight="@dimen/margin_screen_right"/>
    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLength="30"
        android:layout_marginLeft="@dimen/margin_screen_left"
        android:layout_marginRight="@dimen/margin_screen_right"
        android:layout_marginBottom="8dp"
        android:hint="@string/input_new_password"
        android:background="@android:color/transparent"
        android:textColor="@color/black5"/>
    <View style="@style/line"
        android:layout_marginLeft="@dimen/margin_screen_left"
        android:layout_marginRight="@dimen/margin_screen_right"/>
    <EditText
        android:id="@+id/etNewPasswordAgain"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin_screen_left"
        android:layout_marginRight="@dimen/margin_screen_right"
        android:layout_height="wrap_content"
        android:hint="@string/input_new_password_again"
        android:textSize="14sp"
        android:padding="8dp"
        android:maxLength="30"
        android:inputType="textPassword"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:textColor="@color/black5"/>

    <View style="@style/line"
        android:layout_marginLeft="@dimen/margin_screen_left"
        android:layout_marginRight="@dimen/margin_screen_right"/>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_screen_left"
        android:layout_marginRight="@dimen/margin_screen_right"
        android:text="@string/finish"
        android:layout_marginTop="50dp"
        android:enabled="false"
        style="@style/btnPurpleStyle"/>
</LinearLayout>
