<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aidongxiang.app.ui.mine.SettingActivity">

    <include layout="@layout/layout_title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/llAccountSecurity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/item_selector"
            android:paddingRight="@dimen/margin_screen_right"
            android:paddingLeft="@dimen/margin_screen_left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/account_security"
                android:textColor="@color/black5"
                />
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/common_btn_arrow_gray"/>
        </LinearLayout>
        <View style="@style/line"/>

        <LinearLayout
            android:id="@+id/llScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/item_selector"
            android:paddingRight="@dimen/margin_screen_right"
            android:paddingLeft="@dimen/margin_screen_left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/shield_setting"
                android:textColor="@color/black5"
                />
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/common_btn_arrow_gray"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/llClearCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:clickable="true"
            android:background="@drawable/item_selector"
            android:paddingRight="@dimen/margin_screen_right"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_screen_left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/clear_cache"
                android:textColor="@color/black5"
                />
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvCacheSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black5"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/common_btn_arrow_gray"/>
        </LinearLayout>
        <View style="@style/line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:background="@drawable/item_selector"
            android:paddingRight="@dimen/margin_screen_right"
            android:paddingLeft="@dimen/margin_screen_left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/about_us"
                android:textColor="@color/black5"
                />
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/common_btn_arrow_gray"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="@dimen/margin_screen_left"
        android:layout_marginRight="@dimen/margin_screen_right"
        style="@style/btnPurpleStyle"
        android:text="@string/logout"/>
</LinearLayout>
