<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.aidongxiang.app.ui.login.ForgetPasswordActivity">

    <include layout="@layout/layout_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="60dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/common_icon_phone"/>
        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="14sp"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLength="11"
            android:background="@android:color/transparent"
            android:textColor="@color/black5"/>
    </LinearLayout>
    <View style="@style/line"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/common_icon_code"/>
        <EditText
            android:id="@+id/etSmscode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/sms_code"
            android:textSize="14sp"
            android:padding="8dp"
            android:inputType="number"
            android:maxLength="6"
            android:background="@android:color/transparent"
            android:textColor="@color/black5"/>
        <Button
            android:id="@+id/btnSmscode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="56dp"
            android:minHeight="36dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/white"
            android:text="@string/get_sms_code"
            style="@style/btnPurpleStyle"/>
    </LinearLayout>
    <View style="@style/line"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/next"
        android:layout_marginTop="100dp"
        android:enabled="false"
        style="@style/btnPurpleStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        >
        <!--<CheckBox
            android:id="@+id/cbRegisterAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="我同意"
            android:checked="true"
            android:textColor="@color/gray_text"/>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/gray_text"
            android:text="表示我同意"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/blue_text"
            android:text="《爱侗乡使用条款》"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/gray_text"
            android:text="和"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/blue_text"
            android:text="《隐私保护政策》"/>

    </LinearLayout>
</LinearLayout>
