<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.aidongxiang.app.ui.login.LoginActivity">

    <include layout="@layout/layout_title_bar"/>

    <com.aidongxiang.app.widgets.CircleImageView
        android:id="@+id/ivPerfaceAvatar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/common_icon_name"/>
        <EditText
            android:id="@+id/etNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:maxLength="12"
            android:textColor="@color/black5"
            android:hint="@string/nickname"
            android:singleLine="true"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/gray_btn_normal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/common_icon_password"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="30"
            android:textColor="@color/black5"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/gray_btn_normal"/>
    <Button
        android:id="@+id/btnFinish"
        style="@style/btnPurpleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/finish"
        android:textColor="@color/white"
        />

</LinearLayout>
